[package]
name = "lanyte-common"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"

[features]
default = []
seclusor-secrets = ["dep:seclusor-crypto"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
toml = "0.9"
tracing = { workspace = true }
seclusor-crypto = { version = "0.1.1", git = "https://github.com/3leaps/seclusor", tag = "v0.1.1", optional = true }

[dev-dependencies]
serde_json = { workspace = true }
