[package]
name = "lanyte-llm"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"

[dependencies]
futures-core = { workspace = true }
futures-util = { workspace = true }
lanyte-common = { path = "../lanyte-common" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "sync"] }
tokio-stream = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
