[package]
name = "lanyte-state"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"

[dependencies]
lanyte-common = { path = "../lanyte-common", version = "0.1.0" }
lanyte-telemetry = { path = "../lanyte-telemetry", version = "0.1.0" }
rusqlite = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
