[package]
name = "lanyte-telemetry"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
